# protobuf-example

./: README.md  greeter.proto  meson.build
src/: main.cpp
